fixed footer, was too big

--- a/css/styles.css
+++ b/css/styles.css
@@ -84,7 +84,7 @@
     margin: 1% 1% 0 0;
     padding: 1%;
     color:white;
-    height:15em;
+    height:6em;
 }
 
 
